# pincherx_100_ros2

pincher_x100_controller/: CMakeLists.txt  package.xml
pincher_x100_controller/include/pincher_x100_controller/: pincher_x100_controller.hpp
pincher_x100_controller/launch/: pincher_x100_controller.launch.py
pincher_x100_controller/param/: pincher_x100_controller_params.yaml
pincher_x100_controller/scripts/: create_udev_rules
pincher_x100_controller/src/: pincher_x100_controller.cpp
pincher_x100_description/: CMakeLists.txt  package.xml
pincher_x100_description/gazebo/: empty.world  robot.world
pincher_x100_description/launch/: display.launch  display.py  display_dscrete_camera_model.launch  gazebo.launch
pincher_x100_description/meshes/: PXA-100-A-5-Wrist-Gripper.stl  PXA-100-A.step  camera_d435_mount.stl  camera_d435_mount2.stl  px100_srg.stl
pincher_x100_description/rviz/: config.rviz  config_full.rviz
pincher_x100_description/urdf/: _pincher_x100.urdf  _pincher_x100.urdf.xacro  camera.urdf.xacro  pincher_x100.urdf.xacro  pincher_x100_full.urdf.xacro
pincher_x100_libs/: CMakeLists.txt  package.xml
pincher_x100_libs/include/pincher_x100_libs/: pincher_x100.hpp
pincher_x100_libs/src/: custom_trajectory.cpp  dynamixel.cpp  kinematics.cpp  pincher_x100.cpp
pincher_x100_teleop/: CMakeLists.txt  package.xml
pincher_x100_teleop/include/pincher_x100_teleop/: pincher_x100_teleop_joystick.hpp  pincher_x100_teleop_keyboard.hpp
pincher_x100_teleop/launch/: pincher_x100_teleop_joystick.launch.py  pincher_x100_teleop_keyboard.launch.py
pincher_x100_teleop/src/: pincher_x100_teleop_joystick.cpp  pincher_x100_teleop_keyboard.cpp
pincherx_100_ros2/: CMakeLists.txt  package.xml
