<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pincherx_100_ros2</name>
  <version>2.2.0</version>
  <description>
    ROS 2 packages for Trossen's PincherX 100 Arm.
  </description>
  <author email="takarakasai@gmail.com">Takara Kasai</author>
  <maintainer email="takarakasai@gmail.com">Takara Kasai</maintainer>
  <license>Apache 2.0</license>
  <url type="website"></url>
  <url type="emanual"></url>
  <url type="repository">https://github.com/takarakasai/pincherx_100_ros2</url>
  <url type="bugtracker">https://github.com/takarakasai/pincherx_100_ros2/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>pincherx_100_controller</exec_depend>
  <exec_depend>pincherx_100_description</exec_depend>
  <exec_depend>pincherx_100_libs</exec_depend>
  <exec_depend>pincherx_100_teleop</exec_depend>
  <!-- To be added -->
  <!-- <exec_depend>pincherx_100_control_gui</exec_depend> -->
  <!-- <exec_depend>pincherx_100_moveit</exec_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
